--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.1.0",
     "@types/sequelize": "^4.28.15",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.1.5",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.3.0",
     "sequelize": "^6.31.1"
   }
 }
