--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.17",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.1.0",
     "@types/sequelize": "^4.28.15",
     "ts-node": "^10.9.1",
@@ -30,6 +31,7 @@
     "express": "^4.18.2",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.3.0",
     "sequelize": "^6.31.1"
   }
