--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.1.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/sequelize": "^4.28.15",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
@@ -33,6 +34,7 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.3.0",
+    "nodemailer": "^6.9.1",
     "sequelize": "^6.31.1"
   }
 }
