--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@types/node": "^20.1.0",
     "@types/nodemailer": "^6.4.7",
     "@types/sequelize": "^4.28.15",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -37,6 +36,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.3.0",
     "nodemailer": "^6.9.1",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "typescript": "^5.0.4"
   }
 }
